--- a/libs/component/uri/composer.json
+++ b/libs/component/uri/composer.json
@@ -31,6 +31,9 @@
             "Boson\\Component\\Uri\\Tests\\": "tests"
         }
     },
+    "provide": {
+        "boson-php/uri-contracts-implementation": "^0.15"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.15.x-dev",
