--- a/libs/component/runtime/composer.json
+++ b/libs/component/runtime/composer.json
@@ -31,7 +31,8 @@
         "boson-php/uri-factory-contracts": "^0.15",
         "ffi/env": "^1.0",
         "psr/event-dispatcher": "^1.0",
-        "react/promise": "^3.0"
+        "react/promise": "^3.0",
+        "revolt/event-loop": "^1.0"
     },
     "autoload": {
         "psr-4": {
