--- a/phpstan.neon
+++ b/phpstan.neon
@@ -17,7 +17,7 @@ parameters:
     - libs/component/runtime/resources/stubs/kernel32.stub.php
     - libs/component/uri/resources/stubs/constants.stub
   excludePaths:
-    - libs/component/os-info/src/Vendor/Factory/Win32/Advapi32.php
+    - libs/component/os-info/src/Factory/Driver/WindowsRegistry/Advapi32.php
     - libs/component/pasm/src/Driver/Win32/Kernel32.php
     - libs/component/pasm/src/Driver/Nix/Libc.php
     - libs/component/runtime/src/Internal/Saucer/Saucer.php
@@ -52,6 +52,7 @@ parameters:
     - libs/contracts/event-listener-contracts/src
     - libs/contracts/http-contracts/src
     - libs/contracts/id-contracts/src
+    - libs/contracts/os-info-contracts/src
     - libs/contracts/uri-contracts/src
     - libs/contracts/uri-factory-contracts/src
     - libs/contracts/value-object-contracts/src
