Fix os-info composer.json

--- a/libs/component/os-info/composer.json
+++ b/libs/component/os-info/composer.json
@@ -18,7 +18,7 @@
         "php": "^8.4",
         "ext-pcre": "*",
         "ext-ffi": "*",
-        "boson-php/os-info-contracts": "^0.16"
+        "boson-php/os-info-contracts": "^0.16",
         "ffi/env": "^1.0"
     },
     "autoload": {
