--- a/composer.json
+++ b/composer.json
@@ -10,32 +10,33 @@
     ],
     "require": {
         "php": "^8.4",
-        "boson-php/http-bridge": "^0.17",
-        "boson-php/laravel-http-bridge": "^0.17",
-        "boson-php/laravel-provider": "^0.17",
-        "boson-php/psr-http-bridge": "^0.17",
-        "boson-php/spiral-bridge": "^0.17",
-        "boson-php/symfony-bundle": "^0.17",
-        "boson-php/symfony-http-bridge": "^0.17",
         "boson-php/compiler": "^0.17",
         "boson-php/cpu-info": "^0.17",
+        "boson-php/event-listener-contracts": "^0.17",
         "boson-php/globals-provider": "^0.17",
         "boson-php/http": "^0.17",
         "boson-php/http-body-decoder": "^0.17",
-        "boson-php/http-static-provider": "^0.17",
-        "boson-php/os-info": "^0.17",
-        "boson-php/pasm": "^0.17",
-        "boson-php/runtime": "^0.17",
-        "boson-php/uri": "^0.17",
-        "boson-php/uri-factory": "^0.17",
-        "boson-php/weak-types": "^0.17",
-        "boson-php/event-listener-contracts": "^0.17",
+        "boson-php/http-bridge": "^0.17",
         "boson-php/http-contracts": "^0.17",
+        "boson-php/http-static-provider": "^0.17",
         "boson-php/id-contracts": "^0.17",
+        "boson-php/laravel-http-bridge": "^0.17",
+        "boson-php/laravel-provider": "^0.17",
+        "boson-php/os-info": "^0.17",
         "boson-php/os-info-contracts": "^0.17",
+        "boson-php/pasm": "^0.17",
+        "boson-php/psr-http-bridge": "^0.17",
+        "boson-php/runtime": "^0.17",
+        "boson-php/saucer": "^0.17",
+        "boson-php/spiral-bridge": "^0.17",
+        "boson-php/symfony-bundle": "^0.17",
+        "boson-php/symfony-http-bridge": "^0.17",
+        "boson-php/uri": "^0.17",
         "boson-php/uri-contracts": "^0.17",
+        "boson-php/uri-factory": "^0.17",
         "boson-php/uri-factory-contracts": "^0.17",
-        "boson-php/value-object-contracts": "^0.17"
+        "boson-php/value-object-contracts": "^0.17",
+        "boson-php/weak-types": "^0.17"
     },
     "require-dev": {
         "ffi/var-dumper": "^1.0",
@@ -66,6 +67,7 @@
             "Boson\\Component\\Http\\Static\\Tests\\": "libs/component/http-static-provider/tests",
             "Boson\\Component\\OsInfo\\Tests\\": "libs/component/os-info/tests",
             "Boson\\Component\\Pasm\\Tests\\": "libs/component/pasm/tests",
+            "Boson\\Component\\Saucer\\Tests\\": "libs/component/saucer/tests",
             "Boson\\Component\\Uri\\Tests\\": "libs/component/uri/tests",
             "Boson\\Component\\Uri\\Factory\\Tests\\": "libs/component/uri-factory/tests",
             "Boson\\Component\\WeakType\\Tests\\": "libs/component/weak-types/tests",
