--- a/libs/component/saucer/composer.json
+++ b/libs/component/saucer/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "boson-php/runtime",
-    "description": "Boson WebView runtime library",
+    "name": "boson-php/saucer",
+    "description": "Provides Saucer FFI bindings",
     "type": "library",
     "license": "MIT",
     "homepage": "https://bosonphp.com",
     "support": {
         "issues": "https://github.com/boson-php/boson/issues",
-        "source": "https://github.com/boson-php/runtime"
+        "source": "https://github.com/boson-php/saucer"
     },
     "authors": [
         {
@@ -16,26 +16,11 @@
     ],
     "require": {
         "php": "^8.4",
-        "ext-ffi": "*",
-        "boson-php/cpu-info": "^0.17",
-        "boson-php/event-listener-contracts": "^0.17",
-        "boson-php/http": "^0.17",
-        "boson-php/http-contracts": "^0.17",
-        "boson-php/id-contracts": "^0.17",
-        "boson-php/value-object-contracts": "^0.17",
-        "boson-php/os-info": "^0.17",
-        "boson-php/saucer": "^0.17",
-        "boson-php/uri": "^0.17",
-        "boson-php/uri-contracts": "^0.17",
-        "boson-php/uri-factory": "^0.17",
-        "boson-php/uri-factory-contracts": "^0.17",
-        "boson-php/weak-types": "^0.17",
-        "psr/event-dispatcher": "^1.0",
-        "react/promise": "^3.0"
+        "ffi/env": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Boson\\": "src"
+            "Boson\\Component\\Saucer\\": "src"
         }
     },
     "require-dev": {
@@ -43,7 +28,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Boson\\Tests\\": "tests"
+            "Boson\\Component\\Saucer\\Tests\\": "tests"
         }
     },
     "extra": {
