--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "boson-php/uri-factory-contracts": "^0.18",
         "boson-php/value-object-contracts": "^0.18",
         "boson-php/weak-types": "^0.18",
-        "boson-php/webview-ext-battery": "^0.18"
+        "boson-php/webview-ext-battery": "^0.18",
+        "boson-php/webview-ext-network": "^0.18"
     },
     "require-dev": {
         "ffi/var-dumper": "^1.0",
@@ -80,7 +81,8 @@
             "Boson\\Contracts\\Uri\\Tests\\": "libs/contracts/uri-contracts/tests",
             "Boson\\Contracts\\Uri\\Factory\\Tests\\": "libs/contracts/uri-factory-contracts/tests",
             "Boson\\Contracts\\ValueObject\\Tests\\": "libs/contracts/value-object-contracts/tests",
-            "Boson\\WebView\\Api\\Battery\\Tests\\": "libs/extension/webview-ext-battery/tests"
+            "Boson\\WebView\\Api\\Battery\\Tests\\": "libs/extension/webview-ext-battery/tests",
+            "Boson\\WebView\\Api\\Network\\Tests\\": "libs/extension/webview-ext-network/tests"
         }
     },
     "extra": {
