--- a/libs/component/runtime/composer.json
+++ b/libs/component/runtime/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^8.4",
         "ext-ffi": "*",
+        "ext-iconv": "*",
         "boson-php/cpu-info": "^0.18",
         "boson-php/event-listener-contracts": "^0.18",
         "boson-php/http": "^0.18",
