--- a/.github/workflows/subsplit.yml
+++ b/.github/workflows/subsplit.yml
@@ -81,6 +81,8 @@ jobs:
             split_repository: 'webview-ext-battery'
           - local_path: 'extension/webview-ext-network'
             split_repository: 'webview-ext-network'
+          - local_path: 'extension/webview-ext-web-components'
+            split_repository: 'webview-ext-web-components'
     steps:
       - uses: actions/checkout@v4
 
