Fix linter stubs

--- a/libs/extension/app-ext-alert/phpstan.neon
+++ b/libs/extension/app-ext-alert/phpstan.neon
@@ -1,5 +1,10 @@
 parameters:
   level: max
+  scanFiles:
+    - resources/stubs/ffi.stub.php
+  excludePaths:
+    - src/Driver/Windows/User32.php
+    - src/Driver/MacOS/LibObjectC.php
   strictRules:
     allRules: true
   fileExtensions:
