Improve OS and CPU info packages and fix tests

--- a/libs/component/cpu-info/composer.json
+++ b/libs/component/cpu-info/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "^8.4",
         "ffi/env": "^1.0",
-        "boson-php/pasm": "^0.19"
+        "boson-php/pasm": "^0.19",
+        "boson-php/value-object-contracts": "^0.19"
     },
     "autoload": {
         "psr-4": {
