--- a/libs/component/os-info/composer.json
+++ b/libs/component/os-info/composer.json
@@ -18,7 +18,8 @@
         "php": "^8.4",
         "ext-pcre": "*",
         "ext-ffi": "*",
-        "ffi/env": "^1.0"
+        "ffi/env": "^1.0",
+        "boson-php/value-object-contracts": "^0.19"
     },
     "autoload": {
         "psr-4": {
