feat: Implement initial application structure including frontend pages, components, backend, configuration, and comprehensive user manuals.

--- a/config/app-config.json
+++ b/config/app-config.json
@@ -1,7 +1,7 @@
 {
     "branding": {
-        "appName": "Microplus BOS",
-        "logo": "/img/ClientLogo.svg",
+        "appName": "Microplus B O S",
+        "logo": "",
         "favicon": "/favicon.ico",
         "colors": {
             "brandColor": "#1a4480",
