feat: Implement initial backend, frontend, and documentation for Microplus BOS including user management, roles, database utilities, and branding.

--- a/core/backend/.env
+++ b/core/backend/.env
@@ -1,12 +1,12 @@
 # Configurazione Database SQL Server - TEST
 DB_SERVER=localhost
-DB_DATABASE=BOS_CG2026
+DB_DATABASE=BOS
 DB_USER=sa
 DB_PASSWORD=M1cr0+
 DB_PORT=1433
 
 # Configurazione Server
-PORT=3000
+PORT=3001
 
 # Session Secret - CAMBIARE IN PRODUZIONE CON UNA STRINGA CASUALE SICURA
 SESSION_SECRET=my-super-secret-key-8083
