feat: Implement comprehensive user management, including frontend UI, backend APIs, database scripts, and documentation.

--- a/config/app-config.json
+++ b/config/app-config.json
@@ -12,9 +12,9 @@
             "btnSecondaryBg": "#1a4480",
             "btnSecondaryText": "#ffffff",
             "btnSecondaryHover": "#06306c",
-            "btnDangerBg": "#ed9926",
+            "btnDangerBg": "#f10404",
             "btnDangerText": "#ffffff",
-            "btnDangerHover": "#d98512",
+            "btnDangerHover": "#dd0000",
             "headerBg": "#ffffff",
             "headerText": "#1a4480",
             "sidebarBg": "#ffffff",
